# ci-python-prac

./: .gitignore  pyproject.toml
.github/workflows/: add-comment.yaml  analysis.yaml  ci-pipeline.yaml  code_analysis.yaml
src/app/: main.py
src/tests/: test_is_odd.py
